# Web_module_13_HW

Web_m13_HW_REST_API_v3/: main.py  pyproject.toml
Web_m13_HW_REST_API_v3/postgres-data/: postmaster.pid
Web_m13_HW_REST_API_v3/postgres-data/global/: pg_control
Web_m13_HW_REST_API_v3/src/: schemas.py
Web_m13_HW_REST_API_v3/src/repository/: clients.py
Web_m13_HW_REST_API_v3/src/routes/: clients.py  users.py
Web_m13_HW_django_v2/: pyproject.toml
Web_m13_HW_django_v2/hw_project_v2/: .env  manage.py  pyproject.toml
Web_m13_HW_django_v2/hw_project_v2/hw_project_v2/: asgi.py  settings.py  wsgi.py
Web_m13_HW_django_v2/hw_project_v2/quotes/: models.py  utils.py
Web_m13_HW_django_v2/hw_project_v2/quotes/migrations/: 0001_initial.py
Web_m13_HW_django_v2/hw_project_v2/quotes/templates/quotes/: base.html  index.html
Web_m13_HW_django_v2/hw_project_v2/quotes/templatetags/: extract.py
Web_m13_HW_django_v2/hw_project_v2/users/: forms.py  urls.py  views.py
Web_m13_HW_django_v2/hw_project_v2/users/templates/users/: addinfo.html  logout.html  password_reset_done.html  signin.html  signup.html
Web_m13_HW_django_v2/hw_project_v2/utils/: add_quotes_to_mongo.py  authors.json  migration.py
